// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image with data should render an image with alt text 1`] = `
<figure>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
</figure>
`;

exports[`Image with data should render an image with alt text and caption 1`] = `
<figure>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
  <figcaption
    className="sc-bdVaJa kMQFbX"
  >
    Study by the Home Office about the Syrian Vulnerable Persons Resettlement Scheme
  </figcaption>
</figure>
`;

exports[`Image with no data should not render anything 1`] = `null`;
